--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,8 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 60,
+  "tabWidth": 2,
+  "proseWrap": "preserve",
+  "trailingComma": "none",
+  "semi": true
 }
