--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,css,scss,md,ts,tsx,html,graphql}": [
+      "yarn format --uncommitted"
+    ]
+  },
   "dependencies": {
     "core-js": "^3.6.5",
     "react": "18.2.0",
@@ -33,7 +43,9 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.1",
     "jest": "27.5.1",
+    "lint-staged": "^13.0.3",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
