--- a/nx.json
+++ b/nx.json
@@ -9,7 +9,13 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e",
+          "build-storybook"
+        ]
       }
     }
   },
@@ -19,5 +25,8 @@
         "babel": true
       }
     }
+  },
+  "cli": {
+    "defaultCollection": "@nxext/vite"
   }
 }
