--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
       "git add"
     ]
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.3.6",
     "@nrwl/eslint-plugin-nx": "14.3.6",
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
     "@nrwl/react": "^14.3.6",
+    "@nrwl/storybook": "14.3.6",
     "@nrwl/web": "14.3.6",
     "@nrwl/workspace": "14.3.6",
+    "@nxext/react": "^14.0.1",
+    "@nxext/vite": "^14.0.1",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/builder-vite": "^0.1.37",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
@@ -35,7 +41,14 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/recipes": "^0.2.5",
+    "@vanilla-extract/sprinkles": "^1.4.1",
+    "@vanilla-extract/vite-plugin": "^3.2.1",
+    "@vitejs/plugin-react": "^1.3.1",
     "babel-jest": "27.5.1",
+    "babel-loader": "8.1.0",
+    "core-js": "^3.6.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
@@ -48,12 +61,29 @@
     "lint-staged": "^13.0.3",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
+    "regenerator-runtime": "0.13.7",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2"
+    "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
+    "url-loader": "^3.0.0",
+    "vite": "^2.9.9",
+    "vite-plugin-eslint": "1.3.0",
+    "vite-tsconfig-paths": "^3.5.0"
   },
-  "workspaces": [
-    "packages/**"
-  ]
+  "peerDependencies": {
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/recipes": "^0.2.5",
+    "@vanilla-extract/sprinkles": "^1.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/**"
+    ]
+  }
 }
