--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@icarus/core",
   "version": "0.0.1",
-  "dependencies": {
-    "@vanilla-extract/babel-plugin": "^1.1.7",
-    "@vanilla-extract/css": "^1.7.2",
-    "@vanilla-extract/recipes": "^0.2.5",
-    "@vanilla-extract/sprinkles": "^1.4.1"
-  }
+  "main": "./core.umd.js",
+  "module": "./core.es.js",
+  "exports": {
+    ".": {
+      "import": "./core.es.js",
+      "require": "./core.umd.js"
+    }
+  },
+  "peerDependencies": {}
 }
