--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -5,30 +5,22 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@nrwl/web:rollup",
+      "executor": "@nxext/vite:package",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/core",
-        "tsConfig": "packages/core/tsconfig.lib.json",
-        "project": "packages/core/package.json",
-        "entryFile": "packages/core/src/index.ts",
-        "external": ["react/jsx-runtime"],
-        "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
-        "compiler": "babel",
-        "assets": [
-          {
-            "glob": "packages/core/README.md",
-            "input": ".",
-            "output": "."
-          }
-        ]
+        "configFile": "./packages/core/vite.config.ts",
+        "frameworkConfigFile": "@nxext/react/plugins/vite",
+        "entryFile": "src/index.ts"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/core/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "packages/core/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
