--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -3,7 +3,7 @@
     "plugin:@nrwl/nx/react",
     "../../.eslintrc.json"
   ],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "node_modules"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
