--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,5 +8,8 @@
       "import": "./react.es.js",
       "require": "./react.umd.js"
     }
+  },
+  "peerDependencies": {
+    "@icarus/core": "workspace:*"
   }
 }
