--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
       "git add"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "big.js": "^6.2.0",
+    "color": "^4.2.3"
+  },
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
@@ -35,6 +38,8 @@
     "@storybook/react": "^6.5.9",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.3.0",
+    "@types/big.js": "^6.1.4",
+    "@types/color": "^3.0.3",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.13",
@@ -42,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
     "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.5",
     "@vanilla-extract/sprinkles": "^1.4.1",
     "@vanilla-extract/vite-plugin": "^3.2.1",
@@ -62,9 +68,11 @@
     "nx": "14.3.6",
     "prettier": "^2.6.2",
     "react": "18.2.0",
+    "react-docgen-typescript": "^2.2.2",
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
     "regenerator-runtime": "0.13.7",
+    "storybook-dark-mode": "^1.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "tslib": "^2.3.0",
@@ -76,6 +84,7 @@
   },
   "peerDependencies": {
     "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.5",
     "@vanilla-extract/sprinkles": "^1.4.1",
     "react": "18.2.0",
