--- a/packages/react/.storybook/tsconfig.json
+++ b/packages/react/.storybook/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "outDir": ""
+    "outDir": "",
+    "skipLibCheck": true
   },
   "files": [
     "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
@@ -13,7 +14,8 @@
     "../**/*.spec.ts",
     "../**/*.spec.js",
     "../**/*.spec.tsx",
-    "../**/*.spec.jsx"
+    "../**/*.spec.jsx",
+    "../node_modules"
   ],
   "include": ["../src/**/*", "*.js"]
 }
