--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,3 @@
 {
-  "singleQuote": true,
-  "printWidth": 60,
-  "tabWidth": 2,
-  "proseWrap": "preserve",
-  "trailingComma": "none",
-  "semi": true
+  "singleQuote": true
 }
