--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@nxext/react": "^14.0.1",
     "@nxext/vite": "^14.0.1",
     "@testing-library/react": "13.3.0",
+    "@types/color": "^3.0.3",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.13",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/dynamic": "^2.0.2",
+    "@vanilla-extract/vite-plugin": "^3.2.1",
     "@vitejs/plugin-react": "^1.3.1",
+    "color": "^4.2.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.25.2",
