--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.3.6",
     "@nrwl/eslint-plugin-nx": "14.3.6",
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
     "@nrwl/react": "14.3.6",
+    "@nrwl/storybook": "^14.4.0",
     "@nrwl/web": "14.3.6",
     "@nrwl/workspace": "14.3.6",
     "@nxext/react": "^14.0.1",
     "@nxext/vite": "^14.0.1",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/builder-vite": "^0.1.38",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
+    "@storybook/react": "~6.5.9",
+    "@storybook/react-docgen-typescript-plugin": "^1.0.1",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.3.0",
     "@types/color": "^3.0.3",
     "@types/jest": "27.4.1",
@@ -31,8 +42,10 @@
     "@typescript-eslint/parser": "~5.24.0",
     "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/dynamic": "^2.0.2",
+    "@vanilla-extract/recipes": "^0.2.5",
     "@vanilla-extract/vite-plugin": "^3.2.1",
     "@vitejs/plugin-react": "^1.3.1",
+    "babel-loader": "8.1.0",
     "color": "^4.2.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -47,6 +60,7 @@
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2",
+    "url-loader": "^3.0.0",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "1.3.0"
   },
