--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react": "^1.3.1",
     "babel-loader": "8.1.0",
     "color": "^4.2.3",
+    "csstype": "^3.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.25.2",
