--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
@@ -36,8 +36,8 @@
     "@types/color": "^3.0.3",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@types/react": "18.0.13",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
     "@vanilla-extract/css": "^1.7.2",
