--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "icarus",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "predeploy": "cross-env BASE_URL=/icarus/react yarn nx run react:export",
+    "deploy": "gh-pages -d dist/storybook"
+  },
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
@@ -47,6 +50,7 @@
     "@vitejs/plugin-react": "^1.3.1",
     "babel-loader": "8.1.0",
     "color": "^4.2.3",
+    "cross-env": "^7.0.3",
     "csstype": "^3.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -54,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "^4.0.0",
     "jest": "27.5.1",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
