--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -44,7 +44,7 @@
         }
       }
     },
-    "build-storybook": {
+    "export": {
       "executor": "@nrwl/storybook:build",
       "outputs": ["{options.outputPath}"],
       "options": {
