--- a/package.json
+++ b/package.json
@@ -7,13 +7,7 @@
     "deploy": "gh-pages -d dist/storybook"
   },
   "private": true,
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
@@ -27,6 +21,7 @@
     "@nrwl/workspace": "14.3.6",
     "@nxext/react": "^14.0.1",
     "@nxext/vite": "^14.0.1",
+    "@shopify/eslint-plugin": "^42.0.1",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/builder-vite": "^0.1.38",
     "@storybook/builder-webpack5": "~6.5.9",
@@ -50,21 +45,29 @@
     "@vitejs/plugin-react": "^1.3.1",
     "babel-loader": "8.1.0",
     "color": "^4.2.3",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "csstype": "^3.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^4.0.0",
+    "husky": "^8.0.1",
     "jest": "27.5.1",
+    "lint-staged": "^13.0.3",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-test-renderer": "18.2.0",
+    "regenerator-runtime": "0.13.7",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
+    "tslib": "^2.3.0",
     "typescript": "~4.7.2",
     "url-loader": "^3.0.0",
     "usehooks-ts": "^2.6.0",
