--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^18.2.0",
     "react-test-renderer": "18.2.0",
     "regenerator-runtime": "0.13.7",
+    "storybook-dark-mode": "^1.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "tslib": "^2.3.0",
